# quantum-mixer

./: .dockerignore  Dockerfile  Dockerfile.dev
quantum-mixer-backend/: .gitignore  pyproject.toml  start.sh
quantum-mixer-backend/public/: index.html
quantum-mixer-backend/quantum_mixer_backend/: __init__.py  app.py
quantum-mixer-backend/quantum_mixer_backend/frontend/: __init__.py  singlepageapp.py
quantum-mixer-backend/quantum_mixer_backend/quantum/: __init__.py  app.py  circuit_data.py  circuit_executor.py  circuit_parser.py
quantum-mixer-backend/quantum_mixer_backend/usecases/: __init__.py  app.py  usecase.py  usecase_abstract.py  usecase_cocktail.yml  usecase_data.py  usecase_ice.yml  utils.py
quantum-mixer-backend/quantum_mixer_backend/usecases/qoffee/: __init__.py  usecase.py  usecase.yml
quantum-mixer-backend/tests/: test_quantum_mixer_backend.py
quantum-mixer-frontend/: README.md  angular.json  package.json  proxy.conf.js
quantum-mixer-frontend/src/: index.html  styles.scss
quantum-mixer-frontend/src/app/: api.ts  app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  usecase.service.ts
quantum-mixer-frontend/src/app/circuit-composer/: circuit.service.spec.ts  circuit.service.ts
quantum-mixer-frontend/src/app/common/: as-range.pipe.spec.ts  as-range.pipe.ts  draggable.directive.ts  sanitize-html.pipe.ts  utils.ts
quantum-mixer-frontend/src/app/composer/: circuit.ts  composer-catalogue.ts  composer-matrix.ts  composer-operation.ts  composer.ts  operation.ts
(+74 files in other folders)
