[tool.poetry]
name = "quantum-mixer-backend"
version = "0.1.0"
description = ""
authors = ["Max Simon <max.simon@ibm.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
qiskit = "^0.42.1"
requests-oauthlib = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
start = "quantum_mixer_backend.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
